// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildBands — golden geometry pins (all-default widths) > 3-cycle loop: triangle a-b-c 1`] = `
[
  {
    "bandKey": "a|b#L1",
    "centerline": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 160,
        "y": 0,
      },
    ],
    "paths": [
      "M 0.000000 0.000000 L 160.000000 0.000000",
    ],
    "radius": 24,
    "warning": false,
  },
  {
    "bandKey": "b|c#L1",
    "centerline": [
      {
        "x": 160,
        "y": 0,
      },
      {
        "x": 120,
        "y": 0,
      },
      {
        "x": 120,
        "y": 90,
      },
      {
        "x": 80,
        "y": 90,
      },
    ],
    "paths": [
      "M 160.000000 0.000000 L 144.000000 0.000000 A 24.00 24.00 0 0 0 120.000000 24.000000 L 120.000000 66.000000 A 24.00 24.00 0 0 1 96.000000 90.000000 L 80.000000 90.000000",
    ],
    "radius": 24,
    "warning": false,
  },
  {
    "bandKey": "a|c#L1",
    "centerline": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 40,
        "y": 0,
      },
      {
        "x": 40,
        "y": 90,
      },
      {
        "x": 80,
        "y": 90,
      },
    ],
    "paths": [
      "M 0.000000 0.000000 L 16.000000 0.000000 A 24.00 24.00 0 0 1 40.000000 24.000000 L 40.000000 66.000000 A 24.00 24.00 0 0 0 64.000000 90.000000 L 80.000000 90.000000",
    ],
    "radius": 24,
    "warning": false,
  },
]
`;

exports[`buildBands — golden geometry pins (all-default widths) > 5-stripe Z-bend with ample edges (cap inactive) 1`] = `
[
  {
    "bandKey": "s1|s2#L1,L2,L3,L4,L5",
    "centerline": [
      {
        "x": 28,
        "y": 0,
      },
      {
        "x": 28,
        "y": 60,
      },
      {
        "x": 124,
        "y": 60,
      },
      {
        "x": 124,
        "y": 120,
      },
    ],
    "paths": [
      "M 0.000000 0.000000 L 0.000000 12.000001 A 76.00 76.00 0 0 0 75.999999 88.000000 L 76.000000 88.000000 A 20.00 20.00 0 0 1 96.000000 108.000000 L 96.000000 120.000000",
      "M 14.000000 0.000000 L 14.000000 12.000000 A 62.00 62.00 0 0 0 76.000000 74.000000 L 76.000000 74.000000 A 34.00 34.00 0 0 1 110.000000 108.000000 L 110.000000 120.000000",
      "M 28.000000 0.000000 L 28.000000 12.000000 A 48.00 48.00 0 0 0 76.000000 60.000000 L 76.000000 60.000000 A 48.00 48.00 0 0 1 124.000000 108.000000 L 124.000000 120.000000",
      "M 42.000000 0.000000 L 42.000000 12.000000 A 34.00 34.00 0 0 0 76.000000 46.000000 L 76.000000 46.000000 A 62.00 62.00 0 0 1 138.000000 108.000000 L 138.000000 120.000000",
      "M 56.000000 0.000000 L 56.000000 12.000000 A 20.00 20.00 0 0 0 76.000000 32.000000 L 76.000001 32.000000 A 76.00 76.00 0 0 1 152.000000 107.999999 L 152.000000 120.000000",
    ],
    "radius": 48,
    "warning": false,
  },
]
`;

exports[`buildBands — golden geometry pins (all-default widths) > 5-stripe Z-bend with tight edges (marker-fit cap engaged) 1`] = `
[
  {
    "bandKey": "s1|s2#L1,L2,L3,L4,L5",
    "centerline": [
      {
        "x": 28,
        "y": 0,
      },
      {
        "x": 28,
        "y": 50,
      },
      {
        "x": 124,
        "y": 50,
      },
      {
        "x": 124,
        "y": 100,
      },
    ],
    "paths": [
      "M 0.000000 0.000000 L 0.000000 7.000000 A 71.00 71.00 0 0 0 71.000000 78.000000 L 81.000000 78.000000 A 15.00 15.00 0 0 1 96.000000 93.000000 L 96.000000 100.000000",
      "M 14.000000 0.000000 L 14.000000 7.000000 A 57.00 57.00 0 0 0 71.000000 64.000000 L 81.000000 64.000000 A 29.00 29.00 0 0 1 110.000000 93.000000 L 110.000000 100.000000",
      "M 28.000000 0.000000 L 28.000000 7.000000 A 43.00 43.00 0 0 0 71.000000 50.000000 L 81.000000 50.000000 A 43.00 43.00 0 0 1 124.000000 93.000000 L 124.000000 100.000000",
      "M 42.000000 0.000000 L 42.000000 7.000000 A 29.00 29.00 0 0 0 71.000000 36.000000 L 81.000000 36.000000 A 57.00 57.00 0 0 1 138.000000 93.000000 L 138.000000 100.000000",
      "M 56.000000 0.000000 L 56.000000 7.000000 A 15.00 15.00 0 0 0 71.000000 22.000000 L 81.000000 22.000000 A 71.00 71.00 0 0 1 152.000000 93.000000 L 152.000000 100.000000",
    ],
    "radius": 43.00000000000001,
    "warning": false,
  },
]
`;

exports[`buildBands — golden geometry pins (all-default widths) > cramped single-stripe perpendicular terminus (cap below R) 1`] = `
[
  {
    "bandKey": "s1|s2#L1",
    "centerline": [
      {
        "x": 0,
        "y": 0,
      },
      {
        "x": 0,
        "y": -22.941125496954278,
      },
      {
        "x": 14.05887450304572,
        "y": -37,
      },
      {
        "x": 24,
        "y": -37,
      },
    ],
    "paths": [
      "M 0.000000 0.000000 L 0.000000 -20.000000 A 7.10 7.10 0 0 1 2.079690 -25.020815 L 11.979185 -34.920310 A 7.10 7.10 0 0 1 17.000000 -37.000000 L 24.000000 -37.000000",
    ],
    "radius": 7.100505063388332,
    "warning": false,
  },
]
`;

exports[`buildBands — golden geometry pins (all-default widths) > degree-3 junction: through-line a-j-c plus branch j-d 1`] = `
[
  {
    "bandKey": "a|j#L1",
    "centerline": [
      {
        "x": -120,
        "y": 0,
      },
      {
        "x": 0,
        "y": 0,
      },
    ],
    "paths": [
      "M -120.000000 0.000000 L 0.000000 0.000000",
    ],
    "radius": 24,
    "warning": false,
  },
  {
    "bandKey": "c|j#L1",
    "centerline": [
      {
        "x": 120,
        "y": 0,
      },
      {
        "x": 0,
        "y": 0,
      },
    ],
    "paths": [
      "M 120.000000 0.000000 L 0.000000 0.000000",
    ],
    "radius": 24,
    "warning": false,
  },
  {
    "bandKey": "d|j#L1",
    "centerline": [
      {
        "x": 120,
        "y": -120,
      },
      {
        "x": 60,
        "y": -120,
      },
      {
        "x": 60,
        "y": 0,
      },
      {
        "x": 0,
        "y": 0,
      },
    ],
    "paths": [
      "M 120.000000 -120.000000 L 84.000000 -120.000000 A 24.00 24.00 0 0 0 60.000000 -96.000000 L 60.000000 -24.000000 A 24.00 24.00 0 0 1 36.000000 0.000000 L 0.000000 0.000000",
    ],
    "radius": 24,
    "warning": false,
  },
]
`;

exports[`buildBands — golden geometry pins (all-default widths) > diagonal merged pair 1`] = `
[
  {
    "bandKey": "s1|s2#L1,L2",
    "centerline": [
      {
        "x": 4.949747468305833,
        "y": 4.949747468305833,
      },
      {
        "x": 104.94974746830583,
        "y": -95.05025253169417,
      },
    ],
    "paths": [
      "M 9.899495 9.899495 L 109.899495 -90.100505",
      "M 0.000000 0.000000 L 100.000000 -100.000000",
    ],
    "radius": 31,
    "warning": false,
  },
]
`;

exports[`buildBands — golden geometry pins (all-default widths) > straight 5-stripe band 1`] = `
[
  {
    "bandKey": "s1|s2#L1,L2,L3,L4,L5",
    "centerline": [
      {
        "x": 28,
        "y": 0,
      },
      {
        "x": 28,
        "y": 200,
      },
    ],
    "paths": [
      "M 0.000000 0.000000 L 0.000000 200.000000",
      "M 14.000000 0.000000 L 14.000000 200.000000",
      "M 28.000000 0.000000 L 28.000000 200.000000",
      "M 42.000000 0.000000 L 42.000000 200.000000",
      "M 56.000000 0.000000 L 56.000000 200.000000",
    ],
    "radius": 48,
    "warning": false,
  },
]
`;
